--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 postgres: 
-  # host: host.docker.internal
-  host: localhost
+  host: host.docker.internal
+  # host: localhost
   port: 5434
   user: postgres
   password: qwe
