--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 postgres: 
-  # host: host.docker.internal              # адрес хоста базы данных для за пуска в контейнере с базой данных 
-  host: localhost                           # адрес хоста базы данных для запуска не в контейнере
+  host: host.docker.internal              # адрес хоста базы данных для за пуска в контейнере с базой данных 
+  # host: localhost                           # адрес хоста базы данных для запуска не в контейнере
   port: 5434                                # порт подключения к базе данных
   user: postgres                            # адрес хоста базы данных для запуска не в контейнере
   password: qwe                             # адрес хоста базы данных для запуска не в контейнере
